internal/xds/translator/testdata/out/xds-ir/http-endpoint-stats.routes.yaml
- ignorePortInHostMatching: true
  name: listener-enable-endpoint-stats
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: listener-enable-endpoint-stats/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
